--- a/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/gtk-dark.css
@@ -1,10 +1,9 @@
-/*
- * FIXME:  This dark variant looks OK, but it needs specially colored assets.
- * We need to figure out which assets need to be inverted and then import them
- * specially here.
- */
+@define-color light_base_color    #434444;
+@define-color base_color          #232424;
+@define-color dark_base_color     #111111;
+@define-color darkest_base_color  #000000;
 
-@define-color bg_color #232424;
+@define-color bg_color @base_color;
 @define-color fg_color #ffffff;
 
 @define-color selected_bg_color #49667f;
@@ -16,15 +15,16 @@
 @define-color link_color #7777ff;
 @define-color visited_link_color #cc929c;
 
-@define-color color_1 #000000;
-@define-color color_2 #999999;
+@define-color color_1 #999999;
+@define-color color_2 #000000;
 @define-color color_3 #333333;
 
 @define-color insensitive_fg_color #999999;
 @define-color insensitive_text_shadow_color #000000;
 
-@define-color hover_bg_color #111111;
+@define-color hover_bg_color #333333;
 
+@define-color colored_border_fg_color #000000;
 @define-color error_destructive_bg_color #f03838;
 @define-color info_bg_color #ffffbf;
 @define-color question_suggested_bg_color #8cb0d7;
@@ -34,3 +34,4 @@
 @define-color suggested_hover_bg_color shade(@question_suggested_bg_color, 1.1);
 
 @import url('main.css');
+@import url('gtk-dark-assets.css');
