--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -1,4 +1,9 @@
-@define-color bg_color #dcdad5;
+@define-color light_base_color    #ffffff;
+@define-color base_color          #dcdad5;
+@define-color dark_base_color     #777777;
+@define-color darkest_base_color  #000000;
+
+@define-color bg_color @base_color;
 @define-color fg_color #000000;
 
 @define-color selected_bg_color #49667f;
@@ -19,6 +24,7 @@
 
 @define-color hover_bg_color #eeeeee;
 
+@define-color colored_border_fg_color #000000;
 @define-color error_destructive_bg_color #f03838;
 @define-color info_bg_color #ffffbf;
 @define-color question_suggested_bg_color #8cb0d7;
@@ -28,3 +34,4 @@
 @define-color suggested_hover_bg_color shade(@question_suggested_bg_color, 1.1);
 
 @import url('main.css');
+@import url('gtk-assets.css');
