--- a/gtk-3.0/widgets/window-decorations.css
+++ b/gtk-3.0/widgets/window-decorations.css
@@ -12,7 +12,7 @@
 }
 
 /* Workaround to avoid double decorations around menus and tooltips */
-* > * > decoration,
+.popup > decoration,
 tooltip > decoration
 {
 	border: none;
