--- a/gtk-3.0/widgets/expanders.css
+++ b/gtk-3.0/widgets/expanders.css
@@ -7,7 +7,8 @@ expander title:hover
 
 expander > title > arrow
 {
-	margin-right: 4px;
-	min-width: 10px;
-	min-height: 10px;
+	background-position: center;
+	background-repeat: no-repeat;
+	min-width: 14px;
+	min-height: 14px;
 }
