--- a/themes/Raleigh/gtk-3.0/widgets/miscellaneous.css
+++ b/themes/Raleigh/gtk-3.0/widgets/miscellaneous.css
@@ -54,6 +54,14 @@ toolbar
 }
 
 
+/* File choosers */
+
+filechooser > actionbar
+{
+	margin: 6px;
+}
+
+
 /* Places sidebar:  Used primarily in the file chooser. */
 
 /*
