Fix some minor discrepancies between Gtk-Theme-Raleigh and GTK+ 2 Raleigh

--- a/themes/Raleigh/gtk-3.0/widgets/notebooks.css
+++ b/themes/Raleigh/gtk-3.0/widgets/notebooks.css
@@ -35,6 +35,19 @@ notebook > header > tabs > tab:checked
 	background-color: @bg_color;
 }
 
+/*
+ * Stupidly, the focus pseudo-class is not applied to individual notebook
+ * tabs; it is applied to the notebook itself, and the focus rectangle should
+ * instead be drawn around whichever tab is currently active.
+ */
+notebook:focus > header > tabs > tab:checked
+{
+	outline-color: @fg_color;
+	outline-offset: -4px;
+	outline-style: dotted;
+	outline-width: 1px;
+}
+
 notebook > header.top > tabs > tab,
 notebook > header.bottom > tabs > tab
 {
