Don't set border on progress bar indicator unless `empty` style class absent
Fixes issue #2.

--- a/themes/Raleigh/gtk-3.0/widgets/progress-bars.css
+++ b/themes/Raleigh/gtk-3.0/widgets/progress-bars.css
@@ -21,7 +21,7 @@ levelbar trough
 	border-color: @dark_base_color @light_base_color @light_base_color @dark_base_color;
 }
 
-progressbar progress:not(.empty),
+progressbar > trough:not(.empty) > progress,
 levelbar progress:not(.empty)
 {
 	background-color: @selected_bg_color;
