--- a/themes/Raleigh/gtk-3.0/application-styles/caja.css
+++ b/themes/Raleigh/gtk-3.0/application-styles/caja.css
@@ -1,3 +1,9 @@
+/*
+ * All of the following are special style rules for Caja's "icon view" widget,
+ * used on the Caja desktop and in Caja windows in "Icon View" and "Compact
+ * View" modes.
+ */
+
 .view > widget.view
 {
 	background-color: @color_2;
@@ -12,4 +18,9 @@
 .view > widget.view:selected *
 {
 	color: @selected_fg_color;
+}
+
+widget.view.rubberband
+{
+	background-color: alpha (@selected_bg_color, 0.6);
 }
