Theme the Caja file manager in Icon / Compact view correctly
Despite the name of the file manager's mode, Icon View (in Caja) does not
use a GtkIconView like one would expect.  It uses a purpose-built,
file-manager-specific widget called CajaIconContainer.

When one renames a file while Caja is in Icon View or Compact View mode
(both use CajaIconContainer), another specialty, non-standard widget is
used: the EelEditableLabel.  The editable label widget is supposed to
look like a GtkEntry widget, but they are not quite implemented the same,
and as such theme designers need to add style declarations for the editable
label separate from the declarations for GtkEntry.

Gtk-Theme-Raleigh did not theme EelEditableLabels in the past, but this
commit now themes the labels like GtkEntry widgets.

--- a/themes/Raleigh/gtk-3.0/application-styles/caja.css
+++ b/themes/Raleigh/gtk-3.0/application-styles/caja.css
@@ -24,3 +24,24 @@ widget.view.rubberband
 {
 	background-color: alpha (@selected_bg_color, 0.6);
 }
+
+/*
+ * The following style declaration themes EelEditableLabels, which are used
+ * primary by Caja (and possibly other file managers) for the pop-up text
+ * fields used for renaming files in Icon and Compact views.
+ *
+ * Even though an EelEditableLabel is not a GtkEntry, we try our best to make
+ * the two look identical.
+ */
+widget.entry:not(:selected)
+{
+	/*
+	 * Oddly, `background-color` does not work here; we must use
+	 * `background` in order for EelEditableLabels to have an appropriate
+	 * background.
+	 */
+	background: @color_2;
+	border-image-width: 2px;
+	border-image-slice: 2;
+	border-radius: 0;
+}
