--- a/themes/Raleigh/gtk-3.0/gtk.css
+++ b/themes/Raleigh/gtk-3.0/gtk.css
@@ -5,6 +5,8 @@
 
 @define-color bg_color                                      @base_color;
 @define-color fg_color                                      #000000;
+@define-color theme_bg_color                                @bg_color;
+@define-color theme_fg_color                                @fg_color;
 
 @define-color selected_bg_color                             #49667f;
 @define-color selected_fg_color                             #ffffff;
