Some small theme tweaks; improved support for XFCE (Thunar)

--- a/themes/Raleigh/gtk-3.0/application-styles/wnck.css
+++ b/themes/Raleigh/gtk-3.0/application-styles/wnck.css
@@ -39,3 +39,8 @@ wnck-tasklist > button.flat:checked
 	border-image-slice: 2;
 	padding: 2px;
 }*/
+
+.wnck-pager:selected
+{
+	background: @selected_bg_color;
+}
