--- a/themes/Raleigh/gtk-3.0/gtk-assets.css
+++ b/themes/Raleigh/gtk-3.0/gtk-assets.css
@@ -16,6 +16,7 @@ button.link:hover,
 colorswatch#add-color-button,
 /* From widgets/lists-and-views.css */
 calendar.header,
+entry progress,
 /* From widgets/menus-and-popups.css */
 menu > arrow,
 menubar,
